--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-numpy
-python-dotenv
 streamlit
 langchain
 langchain-community
+langchain-core
 langchain-huggingface
-huggingface-hub
+transformers
 sentence-transformers
 faiss-cpu
 pypdf
+regex
